06/02/2025 API Updation
Modify LoginSignUpModal & Header components and Get all Blogs API, Get all subcategory API [CardSlider] & Get all Category API[Shop by Category] integrate with Frontend using Axios.