@@ -1,5 +1,6 @@
 package com.example.grocery_shop_backend.Config;
 
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,42 +8,47 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
+    private static final Long MAX_AGE = 3600L;
+    private static final int CORS_FILTER_ORDER = -102;
 
     @Bean
-    public CorsFilter corsFilter() {
+    public FilterRegistrationBean<CorsFilter> corsFilter() {
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        // Allow requests from your frontend URL
-        config.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-
-        // Allow credentials (required for cookies, like the JWT token)
+        // Allow credentials (for cookies & Authorization headers)
         config.setAllowCredentials(true);
 
-        // Allowed HTTP methods
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Dynamic allowed origins (Use "*" if you don't need credentials)
+        config.setAllowedOriginPatterns(List.of("http://localhost:3000", "https://your-production-domain.com"));
 
         // Allowed headers
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With"
+        ));
 
-        // Expose the necessary headers to the frontend
-        config.setExposedHeaders(Arrays.asList("Authorization", "authToken"));
+        // Expose headers to frontend (needed for JWT tokens)
+        config.setExposedHeaders(List.of("Authorization"));
 
-        // Allow all headers for client-side requests
-        config.addAllowedHeader("*");
+        // Allowed HTTP Methods
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH"));
 
-        // Allow all origins if required (Not recommended for production without restriction)
-        // config.addAllowedOrigin("*");
+        // Set cache max age
+        config.setMaxAge(MAX_AGE);
 
-        // Set the max age for pre-flight requests (in seconds)
-        config.setMaxAge(3600L); // 1 hour
-
-        // Register the configuration with a URL pattern
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+        FilterRegistrationBean<CorsFilter> bean = new FilterRegistrationBean<>(new CorsFilter(source));
 
-        return new CorsFilter(source);
+        // Ensure CORS is processed before Spring Security
+        bean.setOrder(CORS_FILTER_ORDER);
+        return bean;
     }
 }
